@@ -1,15 +1,15 @@
 package play.libs;
 
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import play.exceptions.UnexpectedException;
 
-import java.net.URLEncoder;
-
 public class URLs {
-    public static String encodePart(String part) {
-        try {
-            return URLEncoder.encode(part, "utf-8");
-        } catch (Exception e) {
-            throw new UnexpectedException(e);
-        }
+  public static String encodePart(String part) {
+    try {
+      return URLEncoder.encode(part, StandardCharsets.UTF_8);
+    } catch (Exception e) {
+      throw new UnexpectedException(e);
     }
+  }
 }
